# AMR_nav

./: .gitignore  PROBLEM.md  README.md
assignment_ws/src/amr_bringup/: package.xml  setup.py
assignment_ws/src/amr_bringup/launch/: full_nav.launch.py
assignment_ws/src/amr_description/: CMakeLists.txt  package.xml
assignment_ws/src/amr_description/rviz/: amr_viz.rviz
assignment_ws/src/amr_description/urdf/: amr.urdf.xacro
assignment_ws/src/amr_description/worlds/: room.sdf
assignment_ws/src/amr_nav2/: package.xml  setup.cfg  setup.py
assignment_ws/src/amr_nav2/amr_nav2/: send_goal.py
assignment_ws/src/amr_nav2/behavior_trees/: navigate_to_pose_bt.xml
assignment_ws/src/amr_nav2/config/: amcl.yaml  ekf.yaml  nav2_params.yaml  slam_mapping.yaml
assignment_ws/src/amr_nav2/launch/: navigation.launch.py  slam.launch.py
assignment_ws/src/amr_nav2/maps/: my_room_map.pgm  my_room_map.yaml
assignment_ws/src/amr_sim/: package.xml  setup.py
assignment_ws/src/amr_sim/launch/: display.launch.py
