<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_nav2</name>
  <version>0.0.0</version>
  <description>Navigation package for AMR (Autonomous Mobile Robot) using Nav2</description>
  <maintainer email="arlikararyan@gmail.com">swarn</maintainer>
  <license>Apache 2.0</license>

  <!-- Build dependencies -->
  <build_depend>rclpy</build_depend>
  <build_depend>nav2_common</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>nav2_util</build_depend>
  <build_depend>nav2_controller</build_depend>
  <build_depend>nav2_core</build_depend>
  <build_depend>nav2_costmap_2d</build_depend>
  <build_depend>nav2_lifecycle_manager</build_depend>
  <build_depend>nav2_map_server</build_depend>
  <build_depend>nav2_planner</build_depend>
  <build_depend>nav2_robot</build_depend>
  <build_depend>nav2_voxel_grid</build_depend>
  <build_depend>nav2_waypoint_follower</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>launch_ros</build_depend>
  <build_depend>python3-yaml</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_core</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_robot</exec_depend>
  <exec_depend>nav2_voxel_grid</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
