<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_sim</name>
  <version>0.0.0</version>
  <description>Simulation package for AMR (Autonomous Mobile Robot) using Gazebo</description>
  <maintainer email="arlikararyan@gmail.com">swarn</maintainer>
  <license>Apache 2.0</license>

  <!-- Build and run dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Simulation dependencies -->
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_plugins</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_interfaces</depend>
  
  <!-- Robot description -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>
  
  <!-- Localization -->
  <depend>robot_localization</depend>
  
  <!-- Navigation -->
  <depend>nav2_common</depend>
  <depend>nav2_msgs</depend>
  
  <!-- Launch system -->
  <depend>launch_ros</depend>
  <depend>launch_testing_ros</depend>
  <depend>python3-yaml</depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
